# notion-to-google-calendar

./: example.json  main.py  page.json  pyproject.toml
